<resources>
    <string name="app_name">Moneta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_edit_transaction">Add/Edit Transaction</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="select_date">Select Date</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="expense">Expense</string>
    <string name="ticker_symbol_e_g_aapl">Ticker Symbol (e.g., AAPL)</string>
    <string name="quantity">Quantity</string>
    <string name="purchase_price_per_share">Purchase Price (per share)</string>
    <string name="select_purchase_date">Select Purchase Date</string>
    <string name="company_name_optional">Company Name (Optional)</string>
    <string name="save_investment">Save Investment</string>
    <string name="refresh_prices">Refresh Prices</string>
    <string name="invested">Invested</string>
    <string name="current_value">Current Value</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="month_and_year">Month and Year</string>
    <string name="balance">Balance</string>
    <string name="_0_00">0.00</string>
    <string name="new_category_name">New Category Name</string>
    <string name="add">Add</string>
    <string name="start_date">Start Date</string>
    <string name="to">to</string>
    <string name="end_date">End Date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="category_name">Category Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="investments">Investments</string>
    <string name="update_investment">Update Investment</string>
    <string name="total_0_00">Total: 0.00</string>
</resources>