<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/month_year_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/month_and_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toBottomOf="@id/month_year_textview"
                app:layout_constraintEnd_toStartOf="@+id/income_label_textview"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/balance_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toBottomOf="@+id/balance_label_textview"
                app:layout_constraintEnd_toEndOf="@+id/balance_label_textview"
                app:layout_constraintStart_toStartOf="@+id/balance_label_textview" />

            <TextView
                android:id="@+id/income_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toTopOf="@+id/balance_label_textview"
                app:layout_constraintEnd_toStartOf="@+id/expense_label_textview"
                app:layout_constraintStart_toEndOf="@+id/balance_label_textview"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/income_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintTop_toBottomOf="@+id/income_label_textview"
                app:layout_constraintEnd_toEndOf="@+id/income_label_textview"
                app:layout_constraintStart_toStartOf="@+id/income_label_textview" />

            <TextView
                android:id="@+id/expense_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintTop_toTopOf="@+id/income_label_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/income_label_textview"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/expense_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@+id/expense_label_textview"
                app:layout_constraintEnd_toEndOf="@+id/expense_label_textview"
                app:layout_constraintStart_toStartOf="@+id/expense_label_textview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactions_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/balance_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_transaction_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@android:drawable/ic_input_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>